--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "devDependencies": {
         "axios": "^1.7.4",
+        "flowbite": "^2.5.2",
+        "flowbite-typography": "^1.0.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.4.4"
     }
